# quickai

./: .gitignore  README.md  pyproject.toml
quickai/: __init__.py  callbacks.py  dataset.py  logger.py  module.py  trainer.py  utils.py
